# py-object-mapper

./: .gitignore  README.md  pyproject.toml
py_object_mapper/: __init__.py  inspection.py  mapper.py
tests/: test_mapper.py
tests/utils/: class_A.py  class_B.py  color.py  nest_A.py  nest_B.py
