[tool.poetry]
name = "py-object-mapper"
version = "0.1.0"
description = "A object mapper is implement by python"
authors = ["weijiany <cnweijiany@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
